# openEuler-menus

./: ChangeLog  Makefile.am  Makefile.in  README  README.en.md  README.md  aclocal.m4  configure  configure.in
desktop-files/: Accessories-More.directory.in  AllPrograms.directory.in  Desktop.directory.in  Development-More.directory.in  Documentation-More.directory.in  Documentation.directory.in  Games-More.directory.in  Graphics-More.directory.in  Internet-More.directory.in  Makefile.am  Makefile.in  Multimedia-More.directory.in  Office-More.directory.in  Root.directory.in  ServerConfig-More.directory.in  ServerConfig.directory.in  Settings-More.directory.in  System-More.directory.in  SystemConfig-More.directory.in  SystemConfig.directory.in  Utilities-More.directory.in  Utilities.directory.in  gnome-accessibility.desktop.in  gnome-gdmsetup.desktop.in  gnome-pilot.desktop.in  gthumb.desktop.in  openeuler-audio-player.desktop.in  openeuler-diagrams.desktop.in  openeuler-drawing.desktop.in  openeuler-email.desktop.in  openeuler-evolution-calendar.desktop.in  openeuler-evolution-contacts.desktop.in  openeuler-evolution-mail.desktop.in  openeuler-evolution-tasks.desktop.in  openeuler-math.desktop.in  openeuler-presentations.desktop.in  openeuler-print.desktop.in  openeuler-spreadsheet.desktop.in  openeuler-web.desktop.in  openeuler-word-processor.desktop.in  (+2 more)
menus/: Makefile.in  applications.menu  documentation.menu  server-settings.menu  system-settings.menu
po/: ChangeLog  POTFILES.in  af.po  am.po  ar.po  as.po  be.po  bg.po  bn.po  bn_IN.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  ilo.po  is.po  it.po  ja.po  ka.po  kn.po  ko.po  ku.po  lo.po  lt.po  (+33 more)
